--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>facefox</title>
-    <img rel="icon" href="./NPRVsWqsR1CBXAcuxqTI_I84fqXo7UY9y6H9u.png">
+    <link rel="icon" href="./NPRVsWqsR1CBXAcuxqTI_I84fqXo7UY9y6H9u.png">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 <body>
